--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -14,6 +14,10 @@
 
 		<meta content="authenticity_token" name="csrf-param" />
 		<meta content="b5M7Yl24JKrqUjl/pUF1n/FqwzTJzJoCPiQdCLAlihQ=" name="csrf-token" />
+    <!-- 
+        Built by Kesiena Owho-Ovuakporie 
+        www.linkedin.com/in/kesiena115
+    -->
 
 	</head>
 	<body data-spy="scroll">
@@ -45,11 +49,13 @@
               <ul class="dropdown-menu" role="menu">
                 <li><a href="../#regions-cohort1" class='navbar-link'>Cohort One</a></li>
                 <li><a href="../#regions-cohort2" class='navbar-link'>Cohort Two</a></li>
+                <li><a href="../#regions-cohort3" class='navbar-link'>Cohort Three</a></li>
               </ul>
             </li>
             <li><a class="navbar-link" href="../#our-team" id="our-team-link">Our Team</a></li>
             <li><a href="../apply/" class='navbar-link'>Next Steps</a></li>
-                  <li class="active"><a class="navbar-link" href="#">Resources</a></li>            
+            <li><a class="navbar-link" href="../resources/">Resources</a></li>
+            <li class="active"><a class="navbar-link" href="#">Dashboard</a></li>
             <li><a class="navbar-link" href="../#bottom-info-div" id="contact-us-link">Contact Us</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
