--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="#regions-cohort1" class='navbar-link'>Cohort One</a></li>
 								<li><a href="#regions-cohort2" class='navbar-link'>Cohort Two</a></li>
+								<li><a href="#regions-cohort3" class='navbar-link'>Cohort Three</a></li>
 							</ul>
 						</li>
 						<li><a class="navbar-link" href="#our-team" id="our-team-link">Our Team</a></li>
 						<li><a href="./apply/" class='navbar-link'>Next Steps</a></li>
-            			<li><a class="navbar-link" href="./resources/">Resources</a></li>            
+            			<li><a class="navbar-link" href="./resources/">Resources</a></li>
+            			<li><a class="navbar-link" href="./dashboard/">Dashboard</a></li>       
 						<li><a class="navbar-link" href="#bottom-info-div" id="contact-us-link">Contact Us</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
@@ -63,8 +65,8 @@
 				<div class="col-md-3 col-sm-4 hidden-sm hidden-xs">
 					<!-- tweets. Will be hidden in extra-small screens e.g. mobile phone -->
 					<div class ="homepage-top-tweets">
-						<a class="twitter-timeline" href="https://twitter.com/hashtag/MITREAP" data-widget-id="593982884370853888">#MITREAP Tweets</a>
-						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+						<a class="twitter-timeline" href="https://twitter.com/search?q=%23MITREAP" data-widget-id="593982884370853888">#MITREAP Tweets</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 					</div>
 				</div>
 				<div class="col-md-9 col-sm-12 col-xs-12 resource-column">
@@ -75,7 +77,7 @@
 						<div class="mainpic-text" id="acceleration-main-text">Acceleration</div>
 						<div class="mainpic-text" id="program-main-text">Program</div>
 						<div id="blurb-main-text">
-							In Partnership with the Martin Trust</br>Center for MIT Entrepreneurship and</br>MIT Sloan Executive Education
+							In partnership with MIT Innovation Initiative, </br>Martin Trust Center for MIT Entrepreneurship, </br>and MIT Sloan Executive Education
 						</div>
 					</div>
 				</div>
@@ -132,7 +134,7 @@
 
 							<a href="./places/?location=finland" >
 								<div class='col-sm-4 partner-country-index'>
-									<div class="circle light-blue-reap partner-country-index-2">
+									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Finland" class="country-img" src="./assets/images/finland.png" />
 										<img alt="Bottomcircle label" class="bottom-circle-label" src="./assets/images/bottomcircle_label.png" text="hello" />
 										<p class="country-label-finland country-label-spec">Finland</p>
@@ -152,7 +154,7 @@
 
 							<a href="./places/?location=new-zealand" data-no-turbolink>
 								<div class='col-sm-4 partner-country-index'>
-									<div class="circle light-blue-reap partner-country-index-2">
+									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Newzealand" class="country-img-nz" src="./assets/images/newzealand.png" />
 										<img alt="Bottomcircle label" class="bottom-circle-label" src="./assets/images/bottomcircle_label.png" text="hello" />
 										<p class="country-label-nz country-label-spec">New Zealand</p>
@@ -162,7 +164,7 @@
 							
 							<a href="./places/?location=scotland" data-no-turbolink>
 								<div class='col-sm-4 partner-country-index'>
-									<div class="circle light-blue-reap partner-country-index-2">
+									<div class="circle dark-blue-reap partner-country-index-2">
 											<img alt="Scotland" class="country-img-scotland" src="./assets/images/scotland.png" />
 											<img alt="Bottomcircle label" class="bottom-circle-label" src="./assets/images/bottomcircle_label.png" text="hello" />
 											<p class="country-label-scotland country-label-spec">Scotland</p>
@@ -182,7 +184,7 @@
 
 							<a href="./places/?location=veracruz-mexico" >
 								<div class='col-sm-4 partner-country-index'>
-									<div class="circle light-blue-reap partner-country-index-2">
+									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Mexico" class="country-img-wide" src="./assets/images/mexico.png" />
 										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
 										<p class="country-label-3 country-label-spec">Veracruz, Mexico</p>
@@ -228,7 +230,7 @@
 
 							<a href="./dashboard/?region=qatar" >
 								<div class='col-sm-4 partner-country-index'>
-									<div class="circle light-blue-reap partner-country-index-2">
+									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Qatar" class="country-img-nz" src="./assets/images/qatar.png" />
 										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
 										<p class="country-label-qatar country-label-spec">Qatar</p>
@@ -248,7 +250,7 @@
 
 							<a href="./dashboard/?region=puertorico" >
 								<div class='col-sm-4 partner-country-index'>
-									<div class="circle light-blue-reap partner-country-index-2">
+									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Puertorico" class="country-img-turkey" src="./assets/images/puertorico.png" />
 										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
 										<p class="country-label-nz country-label-spec">Puerto Rico</p>
@@ -258,7 +260,7 @@
 
 							<a href="./dashboard/?region=valencia" >
 								<div class='col-sm-4 partner-country-index'>
-									<div class="circle light-blue-reap partner-country-index-2">
+									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Spain" class="country-img-spain" src="./assets/images/spain.png" />
 										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
 										<p class="country-label-spain country-label-spec">Valencia, Spain</p>
@@ -282,7 +284,7 @@
 
 							<!-- <a href="./places/?location=rio-de-janeiro-brazil" >
 								<div class='col-sm-4 partner-country-index'>
-									<div class="circle light-blue-reap partner-country-index-2">
+									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Brazil" class="country-img-wide" src="./assets/images/brazil.png" />
 										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
 										<p class="country-label-brazil country-label-spec">Rio de Janeiro, Brazil</p>
@@ -302,8 +304,106 @@
 						</div>
 					</div>
 				</div>
-			</div> 
+			</div>
 
+			<div id="third-sub-pic">
+			</div>
+
+			<!-- Panel -->
+			<div class="container" id="regions-cohort3">
+				<div class="content">
+					<div class="row col-md-12 country-header-row">
+						<h2 class="padded-header">Cohort Three Partner Regions</h2>
+					</div>
+
+					<div class="row country-row">
+						<div class='col-md-10 col-md-offset-1 col-sm-12 col-sm-offset-0'>
+							<a href="#" >
+								<div class='col-sm-4 partner-country-index'>
+									<div class="circle dark-blue-reap partner-country-index-2">
+										<img alt="Saudi Arabia" class="country-img-saudi" src="./assets/images/saudi.png" />
+										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
+										<p class="country-label-spec">Al Madinah, Saudi Arabia</p>
+									</div>
+								</div>
+							</a>
+							<a href="#" >
+								<div class='col-sm-4 partner-country-index'>
+									<div class="circle dark-blue-reap partner-country-index-2">
+										<img alt="Israel" class="country-img-israel" src="./assets/images/israel.png" />
+										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
+										<p class="country-label-spec">Ashdod, Israel</p>
+									</div>
+								</div>
+							</a>
+							<a href="#" >
+								<div class='col-sm-4 partner-country-index'>
+									<div class="circle dark-blue-reap partner-country-index-2">
+										<img alt="Thailand" class="country-img-thailand" src="./assets/images/thailand.png" />
+										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
+										<p class="country-label-spec">Bangkok, Thailand</p>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="row country-row">
+						<div class='col-md-10 col-md-offset-1'>
+							<a href="#" data-no-turbolink>
+								<div class='col-sm-4 partner-country-index'>
+									<div class="circle dark-blue-reap partner-country-index-2">
+										<img alt="China" class="country-img-china" src="./assets/images/china.png" />
+										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
+										<p class="country-label-spec">Beijing, China</p>
+									</div>
+								</div>
+							</a>
+							<a href="#" >
+								<div class='col-sm-4 partner-country-index'>
+									<div class="circle dark-blue-reap partner-country-index-2">
+										<img alt="Chile" class="country-img-chile" src="./assets/images/chile.png" />
+										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
+										<p class="country-label-3 country-label-spec">Santiago, Chile</p>
+									</div>
+								</div>
+							</a>
+							<a href="#" >
+								<div class='col-sm-4 partner-country-index'>
+									<div class="circle dark-blue-reap partner-country-index-2">
+										<img alt="Norway" class="country-img-norway" src="./assets/images/norway.png" />
+										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
+										<p class="country-label-spec">Southwest Norway</p>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="row country-row">
+						<div class='col-md-10 col-md-offset-1'>
+							<a href="#" >
+								<div class='col-sm-4 partner-country-index'>
+									<div class="circle dark-blue-reap partner-country-index-2">
+										<img alt="Japan" class="country-img-japan" src="./assets/images/japan.png" />
+										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
+										<p class="country-label-spec">Tokyo, Japan</p>
+									</div>
+								</div>
+							</a>
+							<a href="#" >
+								<div class='col-sm-4 partner-country-index'>
+									<div class="circle dark-blue-reap partner-country-index-2">
+										<img alt="Uk" class="country-img-scotland" src="./assets/images/uk.png" />
+										<img alt="Bottomcircle label" class="bottom-circle-label-0" src="./assets/images/bottomcircle_label.png" text="hello" />
+										<p class="country-label-spec">Wales, United Kingdom</p>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div> 
 
 			<div id="fourth-pic">
 			</div>
@@ -397,6 +497,22 @@
 		                  </div>
 		                </div>
 
+		                <div class='col-md-3 col-sm-4'>
+		                  <div class="person-holder">
+		                    <a href="https://www.linkedin.com/in/sarahjanemaxted">
+		                      <div class="circle red-reap person-circle">
+		                        <img alt="Sarah" class="person-img" src="./assets/images/sarahjane.png" />
+		                        <div class="circle gray-reap overlay-circle"></div>
+		                        <p class="name-label white-text">
+		                          Sarah Jane Maxted</br>
+		                          Executive Director of MIT REAP
+		                        </p>
+		                      </div>
+		                      <p class="person-caption">Sarah Jane Maxted</p>
+		                    </a>
+		                  </div>
+		                </div>
+
 						<div class='col-md-3 col-sm-4'>
 		                  <div class="person-holder">
 		                    <a href="http://mitsloan.mit.edu/about/detail.php?in_spseqno=34256">
@@ -405,26 +521,10 @@
 		                        <div class="circle gray-reap overlay-circle"></div>
 		                        <p class="name-label white-text">
 		                          Georgina Campbell Flatter</br>
-		                          Executive Director of MIT REAP
+		                          Interim Director, MIT Legatum Center for Development and Entrepreneurship
 		                        </p>
 		                      </div>
 		                      <p class="person-caption">Georgina Campbell Flatter</p>
-		                    </a>
-		                  </div>
-		                </div>
-
-						<div class='col-md-3 col-sm-4'>
-		                  <div class="person-holder">
-		                    <a href="https://www.linkedin.com/in/sarahjanemaxted">
-		                      <div class="circle red-reap person-circle">
-		                        <img alt="Sarah" class="person-img" src="./assets/images/sarahjane.png" />
-		                        <div class="circle gray-reap overlay-circle"></div>
-		                        <p class="name-label white-text">
-		                          Sarah Jane Maxted</br>
-		                          Acting Director of MIT REAP
-		                        </p>
-		                      </div>
-		                      <p class="person-caption">Sarah Jane Maxted</p>
 		                    </a>
 		                  </div>
 		                </div>
