--- a/places/index.html
+++ b/places/index.html
@@ -38,11 +38,13 @@
               <ul class="dropdown-menu" role="menu">
                 <li><a href="../#regions-cohort1" class='navbar-link'>Cohort One</a></li>
                 <li><a href="../#regions-cohort2" class='navbar-link'>Cohort Two</a></li>
+                <li><a href="../#regions-cohort3" class='navbar-link'>Cohort Three</a></li>
               </ul>
             </li>
             <li><a class="navbar-link" href="../#our-team" id="our-team-link">Our Team</a></li>
             <li><a href="../apply/" class='navbar-link'>Next Steps</a></li>
             <li><a href="../resources/" class='navbar-link'>Resources</a></li>
+            <li><a href="../dashboard/" class='navbar-link'>Dashboard</a></li>
             <li><a class="navbar-link" href="../#bottom-info-div" id="contact-us-link">Contact Us</a></li>
           </ul>
         </div>
