--- a/resources/index.html
+++ b/resources/index.html
@@ -12,6 +12,10 @@
 
 		<meta content="authenticity_token" name="csrf-param" />
 		<meta content="b5M7Yl24JKrqUjl/pUF1n/FqwzTJzJoCPiQdCLAlihQ=" name="csrf-token" />
+    <!-- 
+        Built by Kesiena Owho-Ovuakporie 
+        www.linkedin.com/in/kesiena115
+    -->
 
 	</head>
 	<body data-spy="scroll">
@@ -43,11 +47,13 @@
               <ul class="dropdown-menu" role="menu">
                 <li><a href="../#regions-cohort1" class='navbar-link'>Cohort One</a></li>
                 <li><a href="../#regions-cohort2" class='navbar-link'>Cohort Two</a></li>
+                <li><a href="../#regions-cohort3" class='navbar-link'>Cohort Three</a></li>
               </ul>
             </li>
             <li><a class="navbar-link" href="../#our-team" id="our-team-link">Our Team</a></li>
             <li><a href="../apply/" class='navbar-link'>Next Steps</a></li>
-                  <li class="active"><a class="navbar-link" href="#">Resources</a></li>            
+            <li class="active"><a class="navbar-link" href="#">Resources</a></li>
+            <li><a href="../dashboard/" class='navbar-link'>Dashboard</a></li>         
             <li><a class="navbar-link" href="../#bottom-info-div" id="contact-us-link">Contact Us</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -95,7 +101,7 @@
               </div>
               <div class="row-fluid col-md-12">
                 <div class='col-md-3 article-container'>
-                  <a href='../assets/pdf/MIT_REAP_Overview_2015.pdf'>
+                  <a href='../assets/pdf/REAP Overview_09092015.pdf'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
                         <img src='../assets/images/reapOverview2015.png' class='article-image article-image-width'>
@@ -663,6 +669,19 @@
               </div>
               <div class="row-fluid col-md-12">
                 <div class='col-md-3 article-container'>
+                  <a href='http://fortune.com/2015/10/05/greek-debt-crisis-startups-economic-opportunity/'>
+                    <div class='article-inner'>
+                      <div class='article-image-container'>
+                        <img src='../assets/images/greece_flag.png' class='article-image article-image-width'>
+                      </div>
+                      <div class='article-description'>
+                        <span class='article-title'>Advice for Greece: Don't let a crisis go to waste</span><br/>
+                        <span class='article-author'>Phil Budden | Fortune</span>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class='col-md-3 article-container'>
                   <a href='http://www.israel21c.org/israel-in-the-spotlight/intels-guide-to-doing-business-with-israelis-sparks-giggles/?utm_content=bufferc95b5&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
@@ -697,19 +716,6 @@
                       <div class='article-description'>
                         <span class='article-title'>Singapore Teaches Kids to Form Start-Ups</span><br/>
                         <span class='article-author'>Elizabeth Weise, USA Today</span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class='col-md-3 article-container'>
-                  <a href='../assets/pdf/World_Economic_Forum.pdf'>
-                    <div class='article-inner'>
-                      <div class='article-image-container'>
-                        <img src='../assets/images/world_economic_forum.jpg' class='article-image article-image-width'>
-                      </div>
-                      <div class='article-description'>
-                        <span class='article-title'>Fostering Innovation driven Entrepreneurship: a Global Perspective</span><br/>
-                        <span class='article-author'>World Economic Forum</span>
                       </div>
                     </div>
                   </a>
