fixed missing images

--- a/resources/more_faculty_news.html
+++ b/resources/more_faculty_news.html
@@ -67,7 +67,7 @@
   <a href='http://mitsloan.mit.edu/newsroom/2014-reap-dinner.php'>
     <div class='article-inner'>
       <div class='article-image-container'>
-        <img src='http://mitsloan.mit.edu/newsroom/images/2014-murray.jpg' class='article-image article-image-width'>
+        <img src='../assets/images/fiona_dinner.jpg' class='article-image article-image-width'>
       </div>
       <div class='article-description'>
         <span class='article-title'>Gala dinner celebrates 'innovation diplomacy' at MIT</span><br/>
@@ -93,7 +93,7 @@
   <a href='http://bit.ly/1b5BdNn'>
     <div class='article-inner'>
       <div class='article-image-container'>
-        <img src='http://img.mit.edu/newsoffice/images/article_images/20131017093404-0.jpg' class='article-image article-image-width'>
+        <img src='../assets/images/fiona2.jpg' class='article-image article-image-width'>
       </div>
       <div class='article-description'>
         <span class='article-title'>Professor Fiona Murray is Named Associate Dean of Innovation and Co-Director of the MIT Innovation Initiative</span><br/>
