fixed missing images

--- a/resources/more_faculty_news.html
+++ b/resources/more_faculty_news.html
@@ -119,7 +119,7 @@
   <a href='http://mitsloan.mit.edu/newsroom/2014-fiona-murray.php?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+mitsloannews+%28MIT+Sloan+News+Feed%29'>
     <div class='article-inner'>
       <div class='article-image-container'>
-        <img src='http://mitsloan.mit.edu/newsroom/images/2014-cameron-murray.jpg' class='article-image article-image-width'>
+        <img src='../assets/images/fiona2.jpg' class='article-image article-image-width'>
       </div>
       <div class='article-description'>
         <span class='article-title'>Associate Dean Fiona Murray named to British prime minister’s Council for Science and Technology</span><br/>
