added selection grid

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -110,9 +110,181 @@
       <div class="container-fluid" id="dashboard-loading-div">
         <img alt="Loading Spinner" id="dashboard-loading-img" src="../assets/images/loading_spinner.gif" />
       </div>
+
       <div class="container-fluid" id="dashboard-prompt">
-        Please select a region from the menu above
-      </div>
+        <div class="row">
+          <h2 class="">Cohort Two Partner Regions</h2>
+        </div>
+
+        <div class="row country-row">
+          <div class='col-md-10 col-md-offset-1 col-sm-12 col-sm-offset-0'>
+            <div class='row'>
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=morocco" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Morocco" class="country-img-wide" src="../assets/images/morocco.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-finland country-label-spec">Morocco</p>
+                  </div>
+                </a>
+              </div>
+                
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=london" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Uk" class="country-img-scotland" src="../assets/images/uk.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-2 country-label-spec">London, United Kingdom</p>
+                  </div>
+                </a>
+              </div>
+
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=qatar" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Qatar" class="country-img-nz" src="../assets/images/qatar.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-qatar country-label-spec">Qatar</p>
+                  </div>
+                </a>
+              </div>
+
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=moscow" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Russia" class="country-img-wide" src="../assets/images/russia.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-3 country-label-spec">Moscow, Russia</p>
+                  </div>
+                </a>
+              </div>
+
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=puertorico" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Puertorico" class="country-img-turkey" src="../assets/images/puertorico.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-nz country-label-spec">Puerto Rico</p>
+                  </div>
+                </a>
+              </div>
+
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=valencia" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Spain" class="country-img-spain" src="../assets/images/spain.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-spain country-label-spec">Valencia, Spain</p>
+                  </div>
+                </a>
+              </div>
+          
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=singapore" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Singapore" class="country-img-wide" src="../assets/images/singapore.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-spec country-label-scotland">Singapore</p>
+                  </div>
+                </a>
+              </div>
+
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=seoul" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Korea" class="country-img-scotland" src="../assets/images/korea.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-china country-label-spec">Seoul, South Korea</p>
+                  </div>
+                </a>
+              </div>
+            </div> <!-- End of row -->
+          </div>
+        </div>
+
+        <div class="row">
+          <h2 class="">Cohort Three Partner Regions</h2>
+        </div>
+
+        <div class="row country-row">
+          <div class='col-md-10 col-md-offset-1 col-sm-12 col-sm-offset-0'>
+            <div class='row'>
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=al-madinah-saudi" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Saudi Arabia" class="country-img-saudi" src="../assets/images/saudi.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-spec">Al Madinah, Saudi Arabia</p>
+                  </div>
+                </a>
+              </div>
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=ashdod-israel" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Israel" class="country-img-israel" src="../assets/images/israel.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-spec">Ashdod, Israel</p>
+                  </div>
+                </a>
+              </div>
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=bangkok-thailand" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Thailand" class="country-img-thailand" src="../assets/images/thailand.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-spec">Bangkok, Thailand</p>
+                  </div>
+                </a>
+              </div>
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=beijing-china" data-no-turbolink>
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="China" class="country-img-china" src="../assets/images/china.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-spec">Beijing, China</p>
+                  </div>
+                </a>
+              </div>
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=santiago-chile" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Chile" class="country-img-chile" src="../assets/images/chile.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-3 country-label-spec">Santiago, Chile</p>
+                  </div>
+                </a>
+              </div>
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=southwest-norway" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Norway" class="country-img-norway" src="../assets/images/norway.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-spec">Southwest Norway</p>
+                  </div>
+                </a>
+              </div>
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=tokyo-japan" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Japan" class="country-img-japan" src="../assets/images/japan.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-spec">Tokyo, Japan</p>
+                  </div>
+                </a>
+              </div>
+              <div class='col-sm-3 partner-country-index'>
+                <a href="./?region=wales-uk" >
+                  <div class="circle dark-blue-reap partner-country-index-2">
+                    <img alt="Uk" class="country-img-uk" src="../assets/images/uk.png" />
+                    <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
+                    <p class="country-label-spec">Wales, United Kingdom</p>
+                  </div>
+                </a>
+              </div>
+            </div> <!-- End of row -->
+          </div>
+        </div>
+      </div> <!-- End of selection grid-->
 
       <div class="container-fluid" id="dashboard-main-panel" style="display:none">
         <div class="row">
