--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -111,7 +111,7 @@
         <img alt="Loading Spinner" id="dashboard-loading-img" src="../assets/images/loading_spinner.gif" />
       </div>
 
-      <div class="container-fluid" id="dashboard-prompt">
+      <div class="container-fluid" id="dashboard-home">
         <div class="row">
           <h2 class="">Cohort Two Partner Regions</h2>
         </div>
